--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "type-check": "vue-tsc --build --force"
   },
   "dependencies": {
-    "vue": "^3.4.15",
-    "vuex": "^4.1.0"
+    "vue": "^3.4.15"
   },
   "devDependencies": {
     "@tsconfig/node20": "^20.1.2",
